#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libsharpecr], [0.0.1], [besser82@fedoraproject.org])
AC_CONFIG_MACRO_DIRS([m4])

AM_INIT_AUTOMAKE([1.15 silent-rules foreign dist-xz])
AM_SILENT_RULES([no])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
